--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -89,18 +89,16 @@ body {
       opacity: 1;
     }
   }
+}
 
-  .comment-form {
-    input, textarea {
-      width: 100%;
-      border: 0;
-      font-size: 1.3rem;
-      padding: 1rem 0;
-      border-bottom: 1px solid lightgrey;
-      outline: none;
-      resize: vertical;
-    }
-  }
+.comment-form input, textarea {
+    width: 100%;
+    border: 0;
+    font-size: 1.3rem;
+    padding: 1rem 0;
+    border-bottom: 1px solid lightgrey;
+    outline: none;
+    resize: vertical;
 }
 
 .grid-photo-wrap {
